Finish save feature and add code for sign rotation
Next, I plan to make it render the editor's changes in the 3D render view.